more refactoring. added to readme example

--- a/public/index.html
+++ b/public/index.html
@@ -21,10 +21,10 @@
             <button class="link-01">Red Distortion</button>
           </li>
           <li>
-            <button class="link-02">Remove Objects</button>
+            <button class="link-02">Blue Shader</button>
           </li>
           <li>
-            <button class="link-03">Blue Shader</button>
+            <button class="link-03">empty</button>
           </li>
         </ul>
       </nav>
