added distortion into settings. added shader values difference

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,10 @@
             <button class="link-02">Blue Shader</button>
           </li>
           <li>
-            <button class="link-03">empty</button>
+            <button class="link-03">simple shader</button>
+          </li>
+          <li>
+            <button class="link-04">clear</button>
           </li>
         </ul>
       </nav>
