navigation and examples added

--- a/public/index.html
+++ b/public/index.html
@@ -3,28 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Particles Effects - WebGL</title>
+    <title>WebGL Lessons</title>
   </head>
   <body>
-    <div class="video">
-      <video src="2.mp4" id="video1" autoplay muted />
-    </div> -->
-
-    <div class="video">
-      <video src="1.mp4" id="video1" autoplay muted />
-    </div> -->
-   
     <div class="menu">
       <nav>
         <ul class="list-items">
           <li>
-            <button class="link-01">Red Distortion</button>
+            <button class="link-01">1. Displacement -  [#s3e10]</button>
           </li>
           <li>
-            <button class="link-02">Blue Shader</button>
+            <button class="link-02">2. Video into Particles -  [#]</button>
+            <p class="examples">
+              <a href="#" class="particled-01">First Distortion</a> |
+              <a href="#" class="particled-02">Second Distortion</a>
+            </p>
           </li>
           <li>
-            <button class="link-03">empty</button>
+            <button class="link-03">3. Particles on a Sculpture [**#s3e32]</button>
+          </li>
+          <li>
+            <button class="link-04">empty</button>
           </li>
         </ul>
       </nav>
